# apicurio-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION.md  Makefile.toml  README.md  REFERENCE_RESOLUTION.md  TESTING.md  TUTORIAL.md  docker-compose.dev.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
examples/: apicurioconfig.yaml  docker-compose.yaml  nprod-example.yaml  reference-resolution-example.yaml  registries.yaml  smart-resolution-example.yaml
scripts/: check-publish.sh  release.sh
src/: config.rs  constants.rs  dependency.rs  identifier.rs  lib.rs  lockfile.rs  lockfile_integration_tests.rs  main.rs  output_path.rs  registry.rs
src/commands/: add.rs  completions.rs  doctor.rs  init.rs  list.rs  lock.rs  mod.rs  publish.rs  pull.rs  push.rs  registry.rs  remove.rs  status.rs  update.rs  verify.rs
tests/: cli_integration_tests.rs  config_save_tests.rs  lockfile_integration_tests.rs
