[package]
name = "apicurio-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.4"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.5.54"
dirs = "4.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
