[package]
name = "apicurio-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.4"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.5.54"
dirs = "4.0"
dialoguer = "0.11"
fuzzy-matcher = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
regex = "1.10.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4.41"
convert_case = "0.8.0"

[dev-dependencies]
cargo-make = "0.37.24"
tempfile = "3.0"
